[package]
name = "tinyspline-sys"
version = "0.1.0"
authors = ["Jocelyn Beedie <jellonator00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.54.0"
cc = {version = "1.0.54", features = ["parallel"]}
