[package]
name = "tinyspline-sys"
version = "0.2.0"
authors = ["Jocelyn Beedie <jellonator00@gmail.com>"]
edition = "2018"
description = "FFI bindings for Tinyspline"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Jellonator/tinyspline-sys"
repository = "https://github.com/Jellonator/tinyspline-sys"
keywords = ["spline", "tinyspline", "bezier", "nurbs", "curve"]
categories = ["external-ffi-bindings", "mathematics"]
links = "libtinyspline"

[build-dependencies]
bindgen = "0.54.0"
cc = {version = "1.0.54", features = ["parallel"]}
